Sending local data avoid derefing null if the local provider no longer has data.

BUG=659199

Review-Url: https://codereview.chromium.org/2452523003
Cr-Commit-Position: refs/heads/master@{#427691}

Former-commit-id: 5f4ce13727c8054995dc2fb2cd510b706107907c